[package]
name = "riir"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
openai = "1.0.0"
tokio = "1.44.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.7"
argh = "0.1.13"
schemars = "0.8.22"
thiserror = "2.0.12"
